force-app/main/default/objects/Asset_Location_Anomaly__c/Asset_Location_Anomaly__c.object-meta.xml
<CustomObject>
    <description>Stores a discrepancy detected by an asset QR location audit.</description>
    <label>Asset Location Anomaly</label>
    <nameField>
        <displayFormat>ANM-{000000}</displayFormat>
        <label>Anomaly Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Location Anomalies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>