force-app/main/default/objects/Asset_Location_Anomaly__c/fields/Anomaly_Type__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Type__c</fullName>
    <label>Anomaly Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Unknown Asset</fullName><default>false</default><label>Unknown Asset</label></value>
            <value><fullName>Wrong Location</fullName><default>false</default><label>Wrong Location</label></value>
            <value><fullName>Missing at Location</fullName><default>false</default><label>Missing at Location</label></value>
            <value><fullName>Outside Location Radius</fullName><default>false</default><label>Outside Location Radius</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>