force-app/main/default/objects/Asset_Location_Anomaly__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Location Anomalies</relationshipLabel>
    <relationshipName>Location_Anomalies</relationshipName>
    <type>Lookup</type>
</CustomField>