force-app/main/default/objects/Asset_Location_Anomaly__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <label>Audit</label>
    <referenceTo>Asset_Location_Audit__c</referenceTo>
    <relationshipLabel>Location Anomalies</relationshipLabel>
    <relationshipName>Location_Anomalies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>