force-app/main/default/objects/Asset_Location_Anomaly__c/fields/ERP_Notified__c.field-meta.xml
<CustomField>
    <fullName>ERP_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP Notified</label>
    <type>Checkbox</type>
</CustomField>