force-app/main/default/objects/Asset_Location_Anomaly__c/fields/ERP_Notified_At__c.field-meta.xml
<CustomField>
    <fullName>ERP_Notified_At__c</fullName>
    <label>ERP Notified At</label>
    <type>DateTime</type>
</CustomField>