force-app/main/default/objects/Asset_Location_Anomaly__c/fields/Notification_Error__c.field-meta.xml
<CustomField>
    <fullName>Notification_Error__c</fullName>
    <label>Notification Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>