force-app/main/default/objects/Asset_Location_Anomaly__c/fields/Salesforce_Location__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location currently stored on Asset.Location__c.</description>
    <label>Salesforce Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Salesforce Asset Anomalies</relationshipLabel>
    <relationshipName>Salesforce_Asset_Anomalies</relationshipName>
    <type>Lookup</type>
</CustomField>