force-app/main/default/objects/Asset_Location_Anomaly__c/fields/Scanned_Code__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Code__c</fullName>
    <label>Scanned Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>