force-app/main/default/objects/Asset_Location_Anomaly__c/fields/Scanned_Location__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scanned Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Scanned Asset Anomalies</relationshipLabel>
    <relationshipName>Scanned_Asset_Anomalies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>