force-app/main/default/objects/Asset_Location_Anomaly__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>true</default><label>Open</label></value>
            <value><fullName>Confirmed</fullName><default>false</default><label>Confirmed</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>